package RelacionMuchosAMuchos;


// Clase de un extremo de una relación
public class Empleado {
    private String nombre;

    public Empleado(String nombre){
        this.nombre = nombre;
    }

    public String getNombre(){
        return nombre;
    }
}
