package RelacionMuchosAMuchos;

// Clase del otro extrem de una relación
public class Proyecto {
    private String nombre;
    
    public Proyecto(String nombre){
        this.nombre = nombre;
    }
    
    public String getNombre(){
        return nombre;
    }
}
